test: reduce boilerplate & fix crud services